--- a/.classpath
+++ b/.classpath
@@ -4,55 +4,55 @@
 	<classpathentry excluding="**/*.java" kind="src" output="target/test-classes" path="src/test/resources"/>
 	<classpathentry including="**/*.java" kind="src" path="src/main/java"/>
 	<classpathentry excluding="**/*.java" kind="src" path="src/main/resources"/>
-	<classpathentry kind="var" path="M2_REPO/javax/servlet/jstl/1.2/jstl-1.2.jar"/>
-	<classpathentry kind="var" path="M2_REPO/javax/servlet/javax.servlet-api/3.1.0/javax.servlet-api-3.1.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/javax/servlet/jsp/jsp-api/2.1/jsp-api-2.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/javax/el/el-api/2.2/el-api-2.2.jar"/>
-	<classpathentry kind="var" path="M2_REPO/javax/mail/mail/1.4/mail-1.4.jar" sourcepath="M2_REPO/javax/mail/mail/1.4/mail-1.4-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/javax/activation/activation/1.1/activation-1.1.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/javax/servlet/jstl/1.2/jstl-1.2.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/javax/servlet/javax.servlet-api/3.1.0/javax.servlet-api-3.1.0.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/javax/servlet/jsp/jsp-api/2.1/jsp-api-2.1.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/javax/el/el-api/2.2/el-api-2.2.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/javax/mail/mail/1.4/mail-1.4.jar" sourcepath="MAVEN_REPO/javax/mail/mail/1.4/mail-1.4-sources.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/javax/activation/activation/1.1/activation-1.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_121"/>
-	<classpathentry kind="var" path="M2_REPO/org/primefaces/primefaces/6.1/primefaces-6.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/primefaces/extensions/primefaces-extensions/6.1.0/primefaces-extensions-6.1.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/google/code/gson/gson/2.2.4/gson-2.2.4.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-lang3/3.1/commons-lang3-3.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/all-themes/1.0.10/all-themes-1.0.10.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/highfaces/highfaces/1.1/highfaces-1.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/json/json/20090211/json-20090211.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/sun/faces/jsf-api/2.2.6/jsf-api-2.2.6.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/sun/faces/jsf-impl/2.2.6/jsf-impl-2.2.6.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/glassfish/web/el-impl/2.2/el-impl-2.2.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/jsoup/jsoup/1.7.3/jsoup-1.7.3.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/spring-context/5.0.0.RELEASE/spring-context-5.0.0.RELEASE.jar" sourcepath="M2_REPO/org/springframework/spring-context/5.0.0.RELEASE/spring-context-5.0.0.RELEASE-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/spring-aop/5.0.0.RELEASE/spring-aop-5.0.0.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/spring-beans/5.0.0.RELEASE/spring-beans-5.0.0.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/spring-core/5.0.0.RELEASE/spring-core-5.0.0.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/spring-jcl/5.0.0.RELEASE/spring-jcl-5.0.0.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/spring-expression/5.0.0.RELEASE/spring-expression-5.0.0.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/spring-web/5.0.0.RELEASE/spring-web-5.0.0.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/spring-webmvc/5.0.0.RELEASE/spring-webmvc-5.0.0.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/security/spring-security-web/3.2.4.RELEASE/spring-security-web-3.2.4.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/aopalliance/aopalliance/1.0/aopalliance-1.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/security/spring-security-core/3.2.4.RELEASE/spring-security-core-3.2.4.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/security/spring-security-config/3.2.4.RELEASE/spring-security-config-3.2.4.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/security/spring-security-taglibs/3.2.4.RELEASE/spring-security-taglibs-3.2.4.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/security/spring-security-acl/3.2.4.RELEASE/spring-security-acl-3.2.4.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/spring-jdbc/3.2.8.RELEASE/spring-jdbc-3.2.8.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/spring-tx/5.0.0.RELEASE/spring-tx-5.0.0.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/data/spring-data-mongodb/2.0.0.RELEASE/spring-data-mongodb-2.0.0.RELEASE.jar" sourcepath="M2_REPO/org/springframework/data/spring-data-mongodb/2.0.0.RELEASE/spring-data-mongodb-2.0.0.RELEASE-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/data/spring-data-commons/2.0.0.RELEASE/spring-data-commons-2.0.0.RELEASE.jar" sourcepath="M2_REPO/org/springframework/data/spring-data-commons/2.0.0.RELEASE/spring-data-commons-2.0.0.RELEASE-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.7.25/slf4j-api-1.7.25.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/mongodb/mongo-java-driver/3.5.0/mongo-java-driver-3.5.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-log4j12/1.7.12/slf4j-log4j12-1.7.12.jar"/>
-	<classpathentry kind="var" path="M2_REPO/junit/junit/4.12/junit-4.12.jar" sourcepath="M2_REPO/junit/junit/4.12/junit-4.12-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/spring-test/5.0.0.RELEASE/spring-test-5.0.0.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/poi/poi/3.11-beta2/poi-3.11-beta2.jar"/>
-	<classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.9/commons-codec-1.9.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/poi/poi-ooxml/3.11-beta2/poi-ooxml-3.11-beta2.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/poi/poi-ooxml-schemas/3.11-beta2/poi-ooxml-schemas-3.11-beta2.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/xmlbeans/xmlbeans/2.6.0/xmlbeans-2.6.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/itextpdf/itextpdf/5.5.9/itextpdf-5.5.9.jar"/>
-	<classpathentry kind="var" path="M2_REPO/commons-io/commons-io/2.5/commons-io-2.5.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/primefaces/primefaces/6.1/primefaces-6.1.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/primefaces/extensions/primefaces-extensions/6.1.0/primefaces-extensions-6.1.0.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/com/google/code/gson/gson/2.2.4/gson-2.2.4.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/apache/commons/commons-lang3/3.1/commons-lang3-3.1.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/primefaces/themes/all-themes/1.0.10/all-themes-1.0.10.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/highfaces/highfaces/1.1/highfaces-1.1.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/json/json/20090211/json-20090211.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/com/sun/faces/jsf-api/2.2.6/jsf-api-2.2.6.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/com/sun/faces/jsf-impl/2.2.6/jsf-impl-2.2.6.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/glassfish/web/el-impl/2.2/el-impl-2.2.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/jsoup/jsoup/1.7.3/jsoup-1.7.3.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/spring-context/5.0.0.RELEASE/spring-context-5.0.0.RELEASE.jar" sourcepath="MAVEN_REPO/org/springframework/spring-context/5.0.0.RELEASE/spring-context-5.0.0.RELEASE-sources.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/spring-aop/5.0.0.RELEASE/spring-aop-5.0.0.RELEASE.jar" sourcepath="MAVEN_REPO/org/springframework/spring-aop/5.0.0.RELEASE/spring-aop-5.0.0.RELEASE-sources.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/spring-beans/5.0.0.RELEASE/spring-beans-5.0.0.RELEASE.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/spring-core/5.0.0.RELEASE/spring-core-5.0.0.RELEASE.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/spring-jcl/5.0.0.RELEASE/spring-jcl-5.0.0.RELEASE.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/spring-expression/5.0.0.RELEASE/spring-expression-5.0.0.RELEASE.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/spring-web/5.0.0.RELEASE/spring-web-5.0.0.RELEASE.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/spring-webmvc/5.0.0.RELEASE/spring-webmvc-5.0.0.RELEASE.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/security/spring-security-web/3.2.4.RELEASE/spring-security-web-3.2.4.RELEASE.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/aopalliance/aopalliance/1.0/aopalliance-1.0.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/security/spring-security-core/3.2.4.RELEASE/spring-security-core-3.2.4.RELEASE.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/security/spring-security-config/3.2.4.RELEASE/spring-security-config-3.2.4.RELEASE.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/security/spring-security-taglibs/3.2.4.RELEASE/spring-security-taglibs-3.2.4.RELEASE.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/security/spring-security-acl/3.2.4.RELEASE/spring-security-acl-3.2.4.RELEASE.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/spring-jdbc/3.2.8.RELEASE/spring-jdbc-3.2.8.RELEASE.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/spring-tx/5.0.0.RELEASE/spring-tx-5.0.0.RELEASE.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/data/spring-data-mongodb/2.0.0.RELEASE/spring-data-mongodb-2.0.0.RELEASE.jar" sourcepath="MAVEN_REPO/org/springframework/data/spring-data-mongodb/2.0.0.RELEASE/spring-data-mongodb-2.0.0.RELEASE-sources.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/data/spring-data-commons/2.0.0.RELEASE/spring-data-commons-2.0.0.RELEASE.jar" sourcepath="MAVEN_REPO/org/springframework/data/spring-data-commons/2.0.0.RELEASE/spring-data-commons-2.0.0.RELEASE-sources.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/slf4j/slf4j-api/1.7.25/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/mongodb/mongo-java-driver/3.5.0/mongo-java-driver-3.5.0.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/log4j/log4j/1.2.17/log4j-1.2.17.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/slf4j/slf4j-log4j12/1.7.12/slf4j-log4j12-1.7.12.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/junit/junit/4.12/junit-4.12.jar" sourcepath="MAVEN_REPO/junit/junit/4.12/junit-4.12-sources.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/springframework/spring-test/5.0.0.RELEASE/spring-test-5.0.0.RELEASE.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/apache/poi/poi/3.11-beta2/poi-3.11-beta2.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/commons-codec/commons-codec/1.9/commons-codec-1.9.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/apache/poi/poi-ooxml/3.11-beta2/poi-ooxml-3.11-beta2.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/apache/poi/poi-ooxml-schemas/3.11-beta2/poi-ooxml-schemas-3.11-beta2.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/apache/xmlbeans/xmlbeans/2.6.0/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/com/itextpdf/itextpdf/5.5.9/itextpdf-5.5.9.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/commons-io/commons-io/2.5/commons-io-2.5.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
