--- a/pom.xml
+++ b/pom.xml
@@ -53,9 +53,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<spring.version>5.0.0.RELEASE</spring.version>
+		<spring.version>5.2.2.RELEASE</spring.version>
 		<spring.security.version>3.2.4.RELEASE</spring.security.version>
-		<spring.mongo.version>2.0.0.RELEASE</spring.mongo.version>
+		<spring.mongo.version>2.2.3.RELEASE</spring.mongo.version>
+		<mongo.driver.version>3.12.0</mongo.driver.version>
 		<primefaces.version>6.1</primefaces.version>
 		<pf.extension.version>6.1.0</pf.extension.version>
 		<pf.themes.version>1.0.10</pf.themes.version>
@@ -194,28 +195,26 @@
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
-			<version>3.5.0</version>
+			<version>${mongo.driver.version}</version>
 		</dependency>
 
-		<!-- Log4j -->
 		<dependency>
-		    <groupId>log4j</groupId>
-		    <artifactId>log4j</artifactId>
-		    <version>1.2.17</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.11.2</version>
 		</dependency>
-
-		<!-- SLF4J -->
-		<dependency> 
-		  <groupId>org.slf4j</groupId>
-		  <artifactId>slf4j-log4j12</artifactId>
-		  <version>1.7.12</version>
+			
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.11.2</version>
 		</dependency>
 
 		<!-- JUnit tests -->
 		<dependency>
 		    <groupId>junit</groupId>
 		    <artifactId>junit</artifactId>
-		    <version>4.12</version>
+		    <version>4.13.1</version>
 		    <scope>test</scope>
 		</dependency>
 		<dependency>
@@ -244,6 +243,20 @@
 			<version>5.5.9</version>
 		</dependency>
 
+	    <dependency>
+	      <groupId>org.bouncycastle</groupId>
+	      <artifactId>bcprov-jdk15on</artifactId>
+	      <version>1.49</version>
+	      <type>jar</type>
+	    </dependency>
+
+	    <dependency>
+	      <groupId>org.bouncycastle</groupId>
+	      <artifactId>bcpkix-jdk15on</artifactId>
+	      <version>1.49</version>
+	      <type>jar</type>
+	    </dependency>
+    
 		<dependency>
 		    <groupId>commons-io</groupId>
 		    <artifactId>commons-io</artifactId>
