--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<spring.version>5.2.2.RELEASE</spring.version>
+		<spring.version>5.3.0</spring.version>
 		<spring.security.version>3.2.4.RELEASE</spring.security.version>
 		<spring.mongo.version>2.2.3.RELEASE</spring.mongo.version>
 		<mongo.driver.version>3.12.0</mongo.driver.version>
@@ -201,13 +201,13 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-			<version>2.11.2</version>
+			<version>2.13.3</version>
 		</dependency>
 			
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.11.2</version>
+			<version>2.13.3</version>
 		</dependency>
 
 		<!-- JUnit tests -->
